[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/HUD.gd" type="Script" id=1]
[ext_resource path="res://src/buttongroup.tres" type="ButtonGroup" id=3]
[ext_resource path="res://src/AnswerBox.gd" type="Script" id=4]
[ext_resource path="res://assets/ultramarine_orange.tres" type="Theme" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 80.0
color = Color( 0.00392157, 0.0156863, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowBackGroundRect" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -201.0
color = Color( 0.00392157, 0.0156863, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -439.0
margin_right = 439.0
margin_bottom = 67.0
theme = ExtResource( 5 )
custom_constants/separation = 6
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="DoubleButton" type="Button" parent="VBoxContainer" groups=[
"operation_buttongroup",
]]
margin_right = 122.0
margin_bottom = 67.0
toggle_mode = true
group = ExtResource( 3 )
text = " Double "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddRowButton" type="Button" parent="VBoxContainer" groups=[
"operation_buttongroup",
]]
margin_left = 128.0
margin_right = 264.0
margin_bottom = 67.0
toggle_mode = true
group = ExtResource( 3 )
text = " Add row "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FiveRowsButton" type="Button" parent="VBoxContainer" groups=[
"operation_buttongroup",
]]
margin_left = 270.0
margin_right = 434.0
margin_bottom = 67.0
toggle_mode = true
group = ExtResource( 3 )
text = " Five rows "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TenRowsButton" type="Button" parent="VBoxContainer" groups=[
"operation_buttongroup",
]]
margin_left = 440.0
margin_right = 590.0
margin_bottom = 67.0
toggle_mode = true
group = ExtResource( 3 )
text = " Ten rows "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="VBoxContainer"]
margin_left = 596.0
margin_right = 704.0
margin_bottom = 67.0
text = " Reset "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerBox" type="LineEdit" parent="VBoxContainer"]
margin_left = 710.0
margin_right = 878.0
margin_bottom = 67.0
grow_horizontal = 2
align = 1
max_length = 4
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "Answer"
placeholder_alpha = 0.138
caret_blink = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -439.0
margin_top = -75.2551
margin_right = 439.0
margin_bottom = 7.74487
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="x1CheckBox" type="Button" parent="VBoxContainer2"]
margin_right = 66.0
margin_bottom = 83.0
toggle_mode = true
text = " 1x "

[node name="x2CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 70.0
margin_right = 136.0
margin_bottom = 83.0
toggle_mode = true
text = " 2x "

[node name="x3CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 140.0
margin_right = 206.0
margin_bottom = 83.0
toggle_mode = true
text = " 3x "

[node name="x4CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 210.0
margin_right = 276.0
margin_bottom = 83.0
theme = ExtResource( 5 )
toggle_mode = true
pressed = true
text = " 4x "

[node name="x5CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 280.0
margin_right = 346.0
margin_bottom = 83.0
toggle_mode = true
text = " 5x "

[node name="x6CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 350.0
margin_right = 416.0
margin_bottom = 83.0
toggle_mode = true
text = " 6x "

[node name="x7CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 420.0
margin_right = 486.0
margin_bottom = 83.0
toggle_mode = true
text = " 7x "

[node name="x8CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 490.0
margin_right = 556.0
margin_bottom = 83.0
toggle_mode = true
text = " 8x "

[node name="x9CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 560.0
margin_right = 626.0
margin_bottom = 83.0
toggle_mode = true
text = " 9x "

[node name="x10CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 630.0
margin_right = 710.0
margin_bottom = 83.0
toggle_mode = true
text = " 10x "

[node name="x11CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 714.0
margin_right = 794.0
margin_bottom = 83.0
toggle_mode = true
text = " 11x "

[node name="x12CheckBox" type="Button" parent="VBoxContainer2"]
margin_left = 798.0
margin_right = 878.0
margin_bottom = 83.0
toggle_mode = true
text = " 12x "

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -176.094
margin_right = 512.0
margin_bottom = 11.9055
theme = ExtResource( 5 )
text = "
6 x 8"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextQuestionButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_right = 120.0
margin_bottom = 77.0
theme = ExtResource( 5 )
text = " Next Question "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/DoubleButton" to="." method="_on_DoubleButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AddRowButton" to="." method="_on_AddRowButton_pressed"]
[connection signal="pressed" from="VBoxContainer/FiveRowsButton" to="." method="_on_FiveRowsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TenRowsButton" to="." method="_on_TenRowsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="text_entered" from="VBoxContainer/AnswerBox" to="." method="_on_AnswerBox_text_entered"]
[connection signal="toggled" from="VBoxContainer2/x1CheckBox" to="." method="_on_x1CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x2CheckBox" to="." method="_on_x2CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x3CheckBox" to="." method="_on_x3CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x4CheckBox" to="." method="_on_x4CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x5CheckBox" to="." method="_on_x5CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x6CheckBox" to="." method="_on_x6CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x7CheckBox" to="." method="_on_x7CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x8CheckBox" to="." method="_on_x8CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x9CheckBox" to="." method="_on_x9CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x10CheckBox" to="." method="_on_x10CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x11CheckBox" to="." method="_on_x11CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer2/x12CheckBox" to="." method="_on_x12CheckBox_toggled"]
[connection signal="pressed" from="NextQuestionButton" to="." method="_on_NextQuestionButton_pressed"]
